# trendforge

./: .gitignore  README.md  agents.py  main.py  requirements.txt  tools.py
app/streamlit-app/: Dockerfile  auth.py  main.py  pyproject.toml  requirements.txt  subscription.py  tools.py
app/stripe-webhook/: Dockerfile  main.py  requirements.txt
infra/domain-mappings/: main.tf  variables.tf
infra/streamlit-app/: main.tf  outputs.tf  push-secrets.sh  variables.tf
infra/stripe-webhook/: main.tf  outputs.tf  variables.tf
infra/website/: 404.html  index.html  main.tf  outputs.tf  variables.tf
infra/website/static/css/: styles.css
infra/website/static/js/: firebase.js  script.js
